--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </h6>
           <h6 class="footer-text">
             <a
-              href=""
+              href="./pages/FAQ.html"
               class="footer-a"
               onclick="sessionStorage.setItem('scrollTo', 'payment')"
               >Оплата</a
@@ -96,10 +96,18 @@
           </h6>
           <h6 class="footer-text">
             <a
-              href=""
+              href="./pages/FAQ.html"
               class="footer-a"
               onclick="sessionStorage.setItem('scrollTo', 'delivery')"
               >Доставка</a
+            >
+          </h6>
+          <h6 class="footer-text">
+            <a
+              href="./pages/basket.html"
+              class="footer-a"
+              onclick="sessionStorage.setItem('scrollTo', 'order-history')"
+              >История заказов</a
             >
           </h6>
         </div>
