--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -111,6 +111,14 @@
         </h6>
         <h6 class="footer-text"><a href="" class="footer-a">Оплата</a></h6>
         <h6 class="footer-text"><a href="" class="footer-a">Доставка</a></h6>
+        <h6 class="footer-text">
+            <a
+              href="basket.html"
+              class="footer-a"
+              onclick="sessionStorage.setItem('scrollTo', 'order-history')"
+              >История заказов</a
+            >
+          </h6>
       </div>
       <div class="footer-column3">
         <h5>MebelShop</h5>
