--- a/pages/sofa.html
+++ b/pages/sofa.html
@@ -173,6 +173,14 @@
               >Доставка</a
             >
           </h6>
+          <h6 class="footer-text">
+            <a
+              href="basket.html"
+              class="footer-a"
+              onclick="sessionStorage.setItem('scrollTo', 'order-history')"
+              >История заказов</a
+            >
+          </h6>
         </div>
         <div class="footer-column3">
           <h5>MebelShop</h5>
