--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -60,7 +60,7 @@
       <h1>MebelShop</h1>
       <div class="content2-1" id="contacts">
         <h2>Контакты</h2>
-        <h3>Телефон: +7 (495) 123-45-67 Email: info@mebelshop.ru Часы работы:
+        <h3>Телефон: +7 (495) 123-45-67 Email: mebelshop17@gmail.com Часы работы:
 
           Понедельник - Пятница: 9:00 - 20:00
           Суббота: 10:00 - 18:00
